// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceMath #getInputToRatio edge cases gas: returns 0 if price is equal 1`] = `17975`;

exports[`PriceMath #getInputToRatio invariants 1:49 to 1:75 at 60bps gas 1`] = `17945`;

exports[`PriceMath #getInputToRatio invariants 1:49 to 1:75 at 60bps snapshot 1`] = `
Object {
  "amountIn": "2993134040057485462783",
  "amountInLessFee": "2975175235817140550006",
  "amountOut": "748865715369234",
  "amountOutMax": "748865715369234",
  "priceAfterSwap": "1672555889889796682461933480544714939124761995",
  "reserve0": "3906250000000000",
  "reserve1": "12544000000000000000000",
}
`;

exports[`PriceMath #getInputToRatio invariants 1:49 to 1:100 at 200bps gas 1`] = `17975`;

exports[`PriceMath #getInputToRatio invariants 1:49 to 1:100 at 200bps snapshot 1`] = `
Object {
  "amountIn": "5485714285714285714286",
  "amountInLessFee": "5376000000000000000000",
  "amountOut": "1171875000000000",
  "amountOutMax": "1171875000000000",
  "priceAfterSwap": "2230074519853062314153571827264836150598041600",
  "reserve0": "3906250000000000",
  "reserve1": "12544000000000000000000",
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 30bps gas 1`] = `18032`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 30bps snapshot 1`] = `
Object {
  "amountIn": "1622890399217556",
  "amountInLessFee": "1618021728019903",
  "amountOut": "7498066401624383375338",
  "amountOutMax": "7498066401624383375338",
  "priceAfterSwap": "1115037259926531063094852456620491933115716085",
  "reserve0": "3906250000000000",
  "reserve1": "25600000000000000000000",
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps gas 1`] = `18032`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps snapshot 1`] = `
Object {
  "amountIn": "1627788458772539",
  "amountInLessFee": "1618021728019903",
  "amountOut": "7498066401624383375338",
  "amountOutMax": "7498066401624383375338",
  "priceAfterSwap": "1115037259926531063094852456620491933115716085",
  "reserve0": "3906250000000000",
  "reserve1": "25600000000000000000000",
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps with small reserves gas 1`] = `18032`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:50 at 60bps with small reserves snapshot 1`] = `
Object {
  "amountIn": "1627788458772537762",
  "amountInLessFee": "1618021728019902535",
  "amountOut": "7498066401624383375338384",
  "amountOutMax": "7498066401624383375338384",
  "priceAfterSwap": "1115037259926531156951965344015384435857589626",
  "reserve0": "3906250000000000000",
  "reserve1": "25600000000000000000000000",
}
`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:75 at 45bps gas 1`] = `17935`;

exports[`PriceMath #getInputToRatio invariants 1:100 to 1:75 at 45bps snapshot 1`] = `
Object {
  "amountIn": "607030615815121",
  "amountInLessFee": "604298978043952",
  "amountOut": "3429749663118370642848",
  "amountOutMax": "3429749663118370642848",
  "priceAfterSwap": "1672555889889796470570646411188414731074577418",
  "reserve0": "3906250000000000",
  "reserve1": "25600000000000000000000",
}
`;
